MP2-2552 Fixed tables overflow out of card

--- a/jems-ui/src/app/common/components/table/table.component.scss
+++ b/jems-ui/src/app/common/components/table/table.component.scss
@@ -3,6 +3,10 @@
   width: 100%;
 }
 
+table {
+  width: 100% !important;
+}
+
 mat-header-cell,
 mat-cell,
 mat-footer-cell {
